; ModuleID = '/home/carl/AnghaBench/git/extr_unpack-trees.c_add_rejected_path.c'
source_filename = "/home/carl/AnghaBench/git/extr_unpack-trees.c_add_rejected_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.unpack_trees_options = type { i32*, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.unpack_trees_options*, i32, i8*)* @add_rejected_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @add_rejected_path(%struct.unpack_trees_options* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.unpack_trees_options*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store %struct.unpack_trees_options* %0, %struct.unpack_trees_options** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %8 = load %struct.unpack_trees_options*, %struct.unpack_trees_options** %5, align 8
  %9 = getelementptr inbounds %struct.unpack_trees_options, %struct.unpack_trees_options* %8, i32 0, i32 2
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %34

13:                                               ; preds = %3
  %14 = load %struct.unpack_trees_options*, %struct.unpack_trees_options** %5, align 8
  %15 = getelementptr inbounds %struct.unpack_trees_options, %struct.unpack_trees_options* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %25, label %18

18:                                               ; preds = %13
  %19 = load %struct.unpack_trees_options*, %struct.unpack_trees_options** %5, align 8
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @ERRORMSG(%struct.unpack_trees_options* %19, i32 %20)
  %22 = load i8*, i8** %7, align 8
  %23 = call i32 @super_prefixed(i8* %22)
  %24 = call i32 @error(i32 %21, i32 %23)
  store i32 %24, i32* %4, align 4
  br label %34

25:                                               ; preds = %13
  %26 = load %struct.unpack_trees_options*, %struct.unpack_trees_options** %5, align 8
  %27 = getelementptr inbounds %struct.unpack_trees_options, %struct.unpack_trees_options* %26, i32 0, i32 0
  %28 = load i32*, i32** %27, align 8
  %29 = load i32, i32* %6, align 4
  %30 = zext i32 %29 to i64
  %31 = getelementptr inbounds i32, i32* %28, i64 %30
  %32 = load i8*, i8** %7, align 8
  %33 = call i32 @string_list_append(i32* %31, i8* %32)
  store i32 -1, i32* %4, align 4
  br label %34

34:                                               ; preds = %25, %18, %12
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local i32 @error(i32, i32) #1

declare dso_local i32 @ERRORMSG(%struct.unpack_trees_options*, i32) #1

declare dso_local i32 @super_prefixed(i8*) #1

declare dso_local i32 @string_list_append(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
